# kaola_engine

./: .gitignore  CMakeLists.txt  README.md  demomainwindow.cpp  demomainwindow.h  demomainwindow.ui  frag.glsl  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  models_cfg.cpp  mopenglview.h  qttest.backupforlinguist.pro  qttest.pro  qttest.pro.user.9fbb00f  qttest.vcxproj  qttest.vcxproj.filters  ray_tracer.cpp  res.qrc  shaders.qrc  ui_mainwindow.h  vert.glsl  zh.qm  zh.ts
include/: network_demo.h
include/editor/: backup_klm_surface.h  bounding_box.h  command.h  design_scheme.h  gl3d_door.h  gl3d_surface_object.h  gl3d_wall.h  gl3d_window.h  gl_utility.h  klm_surface.h  merchandise.h  sign_config.h  style_package.h  surface.h  vertex.h
include/kaola_engine/: Program.hpp  SharedObject.h  gl3d.hpp  gl3d_abstract_object.h  gl3d_framebuffer.hpp  gl3d_general_light_source.h  gl3d_general_texture.hpp  gl3d_image.hpp  gl3d_material.hpp  gl3d_mesh.h  gl3d_obj_authority.h  gl3d_object.h  gl3d_out_headers.h  gl3d_post_process.h  gl3d_render_process.hpp  gl3d_scene.h  gl3d_texture.hpp  gl3d_viewer.h  glheaders.h  global_material.h  kaola_engine.h  loading_object.h  log.h  model_manager.hpp  mopenglview.h  shader_manager.hpp  spacemanager.h
include/resource_and_network/: global_info.h  global_material.h  klm_resource_manager.h  network_tool.h  pack_tool.h
include/utils/: gl3d_global_param.h  gl3d_lock.h  gl3d_math.h  gl3d_path_config.h  gl3d_post_process_template.h  gl3d_scale.h  gl3d_utils.h  io_utility.h
kaola_engine/: KaolaView.h  KaolaView.mm  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp  default.fdata  default.vdata  default_shader_param.cpp  dm.fdata  dm2.vdata  gl3d.hpp  gl3d_framebuffer.cpp  gl3d_framebuffer.hpp  gl3d_general_texture.cpp  gl3d_general_texture.hpp  gl3d_image.cpp  gl3d_image.hpp  gl3d_image.mm  gl3d_material.cpp  gl3d_material.hpp  gl3d_mesh.cpp  gl3d_obj_authority.h  gl3d_object.cpp  gl3d_object.h  gl3d_out_headers.h  gl3d_render_process.cpp  gl3d_render_process.hpp  gl3d_scene.cpp  gl3d_texture.cpp  gl3d_texture.hpp  gl3d_viewer.cpp  gl3d_viewer.h  glheaders.h  image.fdata  kaola_engine.h  log.h  model_manager.cpp  model_manager.hpp  mopenglview.cpp  (+12 more)
shaders/: color.fdata  color.vdata  day.fdata  day.vdata  default.vdata  dm.fdata  dm.vdata  dm2.fdata  dm2.vdata  geo.fdata  geo.gdata  geo.vdata  hdr_test.fdata  hdr_test.vdata  image.fdata  image.vdata  light.fdata  light.vdata  light_compose.fdata  lines.fdata  lines.vdata  multiple_text.fdata  multiple_text.vdata  multiple_text_vector.fdata  multiple_text_vector.vdata  multiple_text_vector_shadow.fdata  multiple_text_vector_shadow.vdata  picking_mask.fdata  picking_mask.vdata  post_process_gauss.fdata  post_process_result.fdata  post_process_result.vdata  shadow_mask.vdata  simple_directional_light.fdata  simple_directional_light.vdata  skybox.fdata  skybox.vdata  sunshine.fdata  text_vector_light.fdata  text_vector_light.vdata  (+2 more)
shaders_mac/: default.fdata  default.vdata  dm.fdata  dm.vdata  dm2.fdata  dm2.vdata  hdr_test.fdata  image.fdata  image.vdata  light_compose.fdata  lines.fdata  lines.vdata  multiple_text.fdata  multiple_text.vdata  multiple_text_vector.fdata  multiple_text_vector.vdata  multiple_text_vector_shadow.fdata  multiple_text_vector_shadow.vdata  picking_mask.fdata  picking_mask.vdata  post_process_gauss.fdata  post_process_result.fdata  post_process_result.vdata  shadow_mask.fdata  shadow_mask.vdata  simple_directional_light.fdata  simple_directional_light.vdata  skybox.fdata  skybox.vdata  text_vector_light.fdata  text_vector_light.vdata  vector_light.fdata  vector_light.vdata  vector_light_toon.fdata  vector_light_toon.vdata
src/Qt_tests/: commands.cpp  commands.h  decoratewin.cpp  decoratewin.h  decoratewin.ui  drawhomewin.cpp  drawhomewin.h  drawhomewin.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  models_cfg.cpp  ray_tracer.h
src/Qt_tests/ui/: drawoption.cpp  drawoption.h  paintedwidget.cpp  paintedwidget.h  pickupdig.cpp  pickupdig.h
src/editor/: bounding_box.cpp  command.cpp  design_scheme.cpp  gl3d_door.cpp  gl3d_surface_object.cpp  gl3d_wall.cpp  gl3d_window.cpp  gl_utility.cpp  klm_surface.cpp  merchandise.cpp  style_package.cpp  surface.cpp  vertex.cpp
src/render/: Program.cpp  Shader.cpp  SharedObject.cpp  default_shader_param.cpp  gl3d_abstract_object.cpp  gl3d_framebuffer.cpp  gl3d_general_light_source.cpp  gl3d_general_texture.cpp  gl3d_image.cpp  gl3d_material.cpp  gl3d_mesh.cpp  gl3d_object.cpp  gl3d_post_process.cpp  gl3d_render_process.cpp  gl3d_scene.cpp  gl3d_texture.cpp  gl3d_viewer.cpp  loading_object.cpp  model_manager.cpp  mopenglview.cpp  render_processes.cpp  shader_manager.cpp  spacemanager.cpp
src/render/light_system/: simple_directional_light.cpp
src/render/render_addons/: default_shader_param.cpp  gl3d_post_process_template.cpp  post_processer_1.cpp  render_processes.cpp  shader_list.cpp
src/resource_and_network/: global_material.cpp  klm_resource_manager.cpp  network_tool.cpp  pack_tool.cpp
src/utils/: gl3d_global_param.cpp  gl3d_lock.cpp  gl3d_math.cpp  gl3d_scale.cpp  io_utility.cpp
src/utils/qui/: myhelper.h
ui/: furniture_selected.ui  login.ui  proc.ui  window_or_door_selected.ui
